# kotz_et_al_2025_motor_shot_noise

./: .gitignore  README.md
01_cpp_Sim/: CMakeLists.txt
01_cpp_Sim/include/: simulate_pde.hpp
01_cpp_Sim/src/: main.cpp  simulate_pde.cpp  spde_capi.cpp
02_analyse_data/: 01_analyze_c_results.py  02_collect_analyzed_results.py  03_analyze_experiment.py  04_fluctuations.py  utils_analyse_sim.py
03_SBI/: 01_collect_S123.py  02_S1.py  03_S2.py  04_S3.py  config_sbi.py  utils_sbi.py
04_plots/: 01_plot_main.py  03_fluctuations_plot.py  04_plot_kymo_SI.py  05_sbi.py
05_matlab/: reaction_diffusion_flagella_v4_dissipation.m  reaction_diffusion_flagella_v4_external_flow.m  x0.mat
utils_rdf_pkg/: pyproject.toml
utils_rdf_pkg/src/utils_rdf/: config.py  flagella_algorythms.py  open_res.py  simulate_spde_capi.py
