[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utils_rdf"
version = "0.1.0"
description = "Helper utilities kotz et al. 2025"
authors = [{ name="Maximilian Kotz" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
